--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>Natalia Banegas</title>
   <h3><p style="color: blue">Nombre</p></h3>
-    <p> Natalia Banegas Martí.</p>
+    <p> Natalia Bnegas Martí.</p>
   <h3><p style="color: blue">Estudios</p></h3>
     <p>FP basica informatica de oficina.</p>
     <p>Grado medio de sistemas microinformáticos y redes.</p>
@@ -13,7 +13,7 @@
     <p> Aprender mas y poder llegar a trabajar de esto.</p>
   <h3><p style="color: blue"> Te gustaria trabajar</p></h3>
     <p> En una emprea de admninistrando redes.</p>
-  <p>Hi</p>
+c  <p>Hi</p>
 </head>
 
 </html>
